--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -9,11 +9,15 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@repo/db": "*",
 		"@repo/ui": "*",
+		"@repo/zod": "*",
+		"@types/bcrypt": "^5.0.2",
+		"bcrypt": "^5.1.1",
 		"next": "14.2.6",
+		"next-auth": "^4.24.7",
 		"react": "18.3.1",
-		"react-dom": "18.3.1",
-		"@repo/db": "*"
+		"react-dom": "18.3.1"
 	},
 	"devDependencies": {
 		"@repo/eslint-config": "*",
