--- a/apps/walletpe-webhook/package.json
+++ b/apps/walletpe-webhook/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "bank-webhook",
+	"name": "walletpe-webhook",
 	"version": "1.0.0",
 	"main": "index.js",
 	"scripts": {
@@ -11,10 +11,9 @@
 	"description": "",
 	"dependencies": {
 		"@types/express": "^4.17.21",
-		"@types/jsonwebtoken": "^9.0.6",
 		"express": "^4.21.0",
-		"jsonwebtoken": "^9.0.2",
 		"zod": "^3.23.8",
-		"@repo/zod": "*"
+		"@repo/zod": "*",
+		"@repo/db": "*"
 	}
 }
