Did some bits of on-ramp transactions

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "exports": {
+    "./select-input": "./src/select-input.tsx",
     "./appbar": "./src/appbar.tsx",
     "./input-box": "./src/input-box.tsx",
     "./signin": "./src/signin.tsx",
