--- a/apps/bank-webhook/package.json
+++ b/apps/bank-webhook/package.json
@@ -3,18 +3,22 @@
 	"version": "1.0.0",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"build": "esbuild src/index.ts --bundle --platform=node --target=node18 --outfile=dist/index.js"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"description": "",
 	"dependencies": {
+		"@repo/zod": "*",
+		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
 		"@types/jsonwebtoken": "^9.0.6",
+		"cors": "^2.8.5",
+		"esbuild": "^0.23.1",
 		"express": "^4.21.0",
 		"jsonwebtoken": "^9.0.2",
-		"zod": "^3.23.8",
-		"@repo/zod": "*"
+		"zod": "^3.23.8"
 	}
 }
