--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -10,10 +10,11 @@
 	},
 	"dependencies": {
 		"@repo/db": "*",
+		"@repo/next-auth-types": "*",
 		"@repo/ui": "*",
 		"@repo/zod": "*",
-		"@repo/next-auth-types": "*",
 		"@types/bcrypt": "^5.0.2",
+		"axios": "^1.7.7",
 		"bcrypt": "^5.1.1",
 		"next": "14.2.6",
 		"next-auth": "^4.24.7",
