--- a/apps/walletpe-webhook/package.json
+++ b/apps/walletpe-webhook/package.json
@@ -3,17 +3,21 @@
 	"version": "1.0.0",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"build": "esbuild src/index.ts --bundle --platform=node --target=node18 --outfile=dist/index.js"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"description": "",
 	"dependencies": {
-		"@types/express": "^4.17.21",
-		"express": "^4.21.0",
-		"zod": "^3.23.8",
+		"@repo/db": "*",
 		"@repo/zod": "*",
-		"@repo/db": "*"
+		"@types/cors": "^2.8.17",
+		"@types/express": "^4.17.21",
+		"cors": "^2.8.5",
+		"esbuild": "^0.23.1",
+		"express": "^4.21.0",
+		"zod": "^3.23.8"
 	}
 }
