--- a/apps/walletpe-webhook/package.json
+++ b/apps/walletpe-webhook/package.json
@@ -15,9 +15,12 @@
 		"@repo/zod": "*",
 		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
+		"@types/jsonwebtoken": "^9.0.6",
 		"cors": "^2.8.5",
+		"dotenv": "^16.4.5",
 		"esbuild": "^0.23.1",
 		"express": "^4.21.0",
+		"jsonwebtoken": "^9.0.2",
 		"zod": "^3.23.8"
 	}
 }
