--- a/apps/bank-webhook/package.json
+++ b/apps/bank-webhook/package.json
@@ -3,17 +3,10 @@
 	"version": "1.0.0",
 	"main": "index.js",
 	"scripts": {
-		"start": "npx nodemon dist/index.js",
-		"ts.check": "tsc --project tsconfig.json",
-		"add-build": "git add dist",
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "rimraf dist && esbuild src/index.ts --bundle --platform=node --target=node18 --outfile=dist/index.js"
+		"build": "esbuild src/index.ts --bundle --platform=node --target=node18 --outfile=dist/index.js",
+		"start": "npx nodemon dist/index.js"
 	},
-	"pre-commit": [
-		"ts.check",
-		"build",
-		"add-build"
-	],
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
