--- a/apps/bank-webhook/package.json
+++ b/apps/bank-webhook/package.json
@@ -22,8 +22,5 @@
 		"jsonwebtoken": "^9.0.2",
 		"zod": "^3.23.8"
 	},
-	"devDependencies": {
-		"pre-commit": "^1.2.2",
-		"rimraf": "^6.0.1"
-	}
+	"devDependencies": {}
 }
