--- a/apps/bank-webhook/tsconfig.json
+++ b/apps/bank-webhook/tsconfig.json
@@ -1,9 +1,9 @@
 {
 	"extends": "@repo/typescript-config/base.json",
 	"compilerOptions": {
-		"rootDir": "./src",
+		"rootDir": "./",
 		"outDir": "./dist"
 	},
-	"include": ["src"],
+	"include": ["./api/*.ts", "src"],
 	"exclude": ["node_modules", "dist"]
 }
